refactorizacion de clase de configuracion, dtos controlador de stats añade guardado de analisis de ADN